--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -177,7 +177,7 @@ Email: varuns@iitm.ac.in </li>
 <h3> Grading policy: </h3>
 <ul> <li> Quiz-I: 20% </li>
 	 <li> Quiz-II: 20% </li>
-	 <li> End semester exam: 60% <a href="https://owncloud.iitm.ac.in/index.php/s/cKbOmCy0bS8yhS1" target="_blank">End Sem 2017</a></li>
+	 <li> End semester exam: 60%</li>
 </ul>
 
 <h3> Questions?</h3>
