rm alternative fuel

--- a/project_writeup/MS_PhD_Jan_2020.html
+++ b/project_writeup/MS_PhD_Jan_2020.html
@@ -32,20 +32,20 @@ h4   {color: lightblue;}
 
 <tr>
 <td width="100%">
-	<center><h3> 1. Kinetic modeling </h3> </center>
+	<center><h3> 1. Bottom-up approach to kinetic modeling of larger hydrocarbons </h3> </center>
 		
 <body bgcolor = "black">
 <h3>Abstract</h3>
 
-One of the two topics will be the object of study:
+<!-- One of the two topics will be the object of study:
 
 <h3> Alternative Fuel combustion </h3>
 Renewable and alternative fuels for aviation have advantages of lesser emissions and clean burning ability. This project involves modeling the oxidation of these fuels using a representative mixture. Theoretical in nature, the research focus is on identifying such a suitable mixture and arriving at a kinetic scheme to predict the fuel's combustion behavior from a fundamental approach. This opens up avenues to study several `drop-in alternatives' to current day aviation fuels. 
 
 <br>
 <center><h3>OR</h3></center>
+-->
 
-<h3>Bottom-up approach to kinetic modeling of larger hydrocarbons </h3>
 A bottom-up approach to compact model development has been put forth in one of our recent works to successfully develop a 23 species model for dimethylether. How can this be extended to higher hydrocarbons? A major challenge in adopting this methodology for higher hydrocarbons is the development of the fuel specific sub-mechanism. To begin with, the student will use the approach to develop the kinetics of a small molecule and thereafter investigate how to extend the approach.
 
 <h3>Pre-requisite</h3>
