link to m-tech dd proj

--- a/index.html
+++ b/index.html
@@ -406,7 +406,8 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <table border="1" cellspacing="2" cellpadding="5" width="100%">
 <tr>
 	<td width="100%">
-<center><h3><a href="project_writeup/MS_PhD_Jan_2020.html" target="_blank"> <center><i>Abstracts for topics floated for MS admissions (Jan 2020)</i></center></a></h3> </center>
+<center><h3><a href="#" onclick="openCity(event, 'Available_Projects')">  <center><i>Abstracts for topics floated for M.Tech/DD projects</i></center></a></h3> </center>
+<center><h3><a href="project_writeup/MS_PhD_Jan_2020.html" target="_blank"><center><i>Abstracts for topics floated for MS admissions (Jan 2020)</i></center></a></h3> </center>
 <!-- <center><h2> <a href="#" onclick="openCity(event, 'Available_Projects')"><i>Possible M. Tech/DD projects 2019</i></center></a></h2> -->
 </tr>
 </table>
@@ -1495,7 +1496,7 @@ All mechanism are made available and have been validated as discussed in the jou
 </tr>
 
 <tr><td>
-<center>	<p class=smallcard>For an M.Tech project*</p> </center>
+<center>	<p class=smallcard>For a M.Tech/DD project*</p> </center>
 <ul>
 	<li> <h3>Automatic reaction mechanism generation</h3></li>
 	The primary objective is to develop stand alone code to generate mechanisms for any hydrocarbon fuel. This has been done earlier -- but the challenge is building one on our own and how can we do better than the existing ones. <br><br>
