--- a/index.html
+++ b/index.html
@@ -1613,7 +1613,8 @@ All mechanism are made available and have been validated as discussed in the jou
 <a href="https://www.hackerrank.com" target="_blank"> HackerRank</a> <br>
 <a href="https://www.gocomics.com/calvinandhobbes/" target="_blank"> Calvin & Hobbes</a> <br>
 <a href="http://phdcomics.com" target="_blank"> PhD comics </a><br>
-<a href="logger/books.html" target="_blank">Books</a><br>
+<!-- <a href="logger/books.html" target="_blank">Books</a><br> -->
+<a href="logger/quotes.html" target="_blank">Quotes</a><br>
 <br>
 </td>
 </tr>
