--- a/index.html
+++ b/index.html
@@ -408,6 +408,7 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 	<td width="100%">
 <center><h3><a href="#" onclick="openCity(event, 'Available_Projects')">  <center><i>Abstracts for topics floated for M.Tech/DD projects</i></center></a></h3> </center>
 <center><h3><a href="project_writeup/MS_PhD_Jan_2020.html" target="_blank"><center><i>Abstracts for topics floated for MS admissions (Jan 2020)</i></center></a></h3> </center>
+<center><h3>** We have received a grant to carry out research in development of compact kinetic models. Open positions are likely to be adverstised for project assistants soon. Please watch out if you are interested. ** </h3> </center>
 <!-- <center><h2> <a href="#" onclick="openCity(event, 'Available_Projects')"><i>Possible M. Tech/DD projects 2019</i></center></a></h2> -->
 </tr>
 </table>
@@ -851,7 +852,8 @@ Ignition delay has an important role in combustion. Ignition delay is affected b
 <li> Exploratory Research Project, May 2016--2017
 <li> Indo-Russian project awarded by DST under Grant No. 16-49-02017: October 2016--2019
 <li> InnoINDIGO BiofCFD project awarded by DST: November 2017--2020
-<li> New Faculty Seed Grant, Project No. MEE/15-16/845/NFIG: November 2017--2020
+<li> New Faculty Seed Grant, Project No. MEE/15-16/845/NFSG: November 2017--2020
+<li> Core Research Grant, SERB, DST, Project No. -- : December 2019--2022 
 </ul>
 </td>
 </tr>
