--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <table border="1" cellspacing="2" cellpadding="5" width="100%">
 <tr>
 	<td width="100%">
-<center><h3><a href="#" onclick="openCity(event, 'Available_Projects')">  <center><i>Abstracts for topics floated for M.Tech/DD projects</i></center></a></h3> </center>
+<!-- ><center><h3><a href="#" onclick="openCity(event, 'Available_Projects')">  <center><i>Abstracts for topics floated for M.Tech/DD projects</i></center></a></h3> </center> -->
 <center><h3><a href="project_writeup/MS_PhD_Jan_2020.html" target="_blank"><center><i>Abstracts for topics floated for MS admissions (Jan 2020)</i></center></a></h3> </center>
 <center><h3>** We have received a grant to carry out research in development of compact kinetic models. Open positions are likely to be adverstised for project assistants soon. Please watch out if you are interested. ** </h3> </center>
 <!-- <center><h2> <a href="#" onclick="openCity(event, 'Available_Projects')"><i>Possible M. Tech/DD projects 2019</i></center></a></h2> -->
@@ -482,14 +482,20 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <!-- <h4>Click each item for more details</h4> -->
 Our research focuses on development of chemical kinetic models to describe oxidation of fuels. I am interested in predicting global combustion characteristics of conventional and alternative fuels and interpreting these observations based on insights gained from molecular level kinetic descriptions. 
 
-<br><br>In the recent times, my team has been studying kinetics of oxygenated fuels, which being renewable and resulting in reduced emissions, are immediately relevant to the country's energy needs. In addition, we have also recently explored ideas to generate compact reaction mechanisms and optimize kinetic schemes. 
-Our research work falls under the broad headers listed below:
+<br><br>In the recent times, my team has been studying kinetics of oxygenated fuels, which being renewable and resulting in reduced emissions, are immediately relevant to the country's energy needs. In addition, we are also recently explored ideas to generate compact reaction mechanisms and optimize kinetic schemes. A brief tour of our research activities is provided below. The <a href="#funds">funding agencies</a> that support our research are gratefully acknowledged.
+
 <!-- Some work carried out by our alumni are showcased <a href="#" onclick="openCity(event, 'Alumni')">here</a>. -->
 
 <!--</br> </br> <i>If you are interested in being a part of our team, peruse the list of <a href="#" onclick="openCity(event, 'Available_Projects')"> available projects</a> to identify your interests and write to me with a subject line that includes the title of the topic. Please note that I am *not* interested in hiring interns.</i> -->
 
 
 </tr>
+</table>
+
+<table border="1" cellspacing="1" cellpadding="5" width="100%">
+
+<tr>
+<p class=small>Glimpse of our Research work</p>
 
 <tr>
 <td>
@@ -848,12 +854,12 @@ Ignition delay has an important role in combustion. Ignition delay is affected b
 <td>
 <h2 id="funds">Funding sources</h2>
 <ul>
-<li> New Faculty Initiation Grant, Project No. MEE/15-16/845/NFIG: September 2015--2017
-<li> Exploratory Research Project, May 2016--2017
-<li> Indo-Russian project awarded by DST under Grant No. 16-49-02017: October 2016--2019
+<li> Core Research Grant, awarded by SERB, DST, Project No. -- : December 2019--2022 
+<li> New Faculty Seed Grant, IIT Madras, Project No. MEE/15-16/845/NFSG: November 2017--2020
 <li> InnoINDIGO BiofCFD project awarded by DST: November 2017--2020
-<li> New Faculty Seed Grant, Project No. MEE/15-16/845/NFSG: November 2017--2020
-<li> Core Research Grant, SERB, DST, Project No. -- : December 2019--2022 
+<li> Indo-Russian project awarded by DST under Grant No. 16-49-02017: October 2016--2019
+<li> Exploratory Research Project, IIT Madras, May 2016--2017
+<li> New Faculty Initiation Grant, IIT Madras, Project No. MEE/15-16/845/NFIG: September 2015--2017
 </ul>
 </td>
 </tr>
