--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <table border="1" cellspacing="2" cellpadding="5" width="100%">
 <tr>
 	<td width="100%">
-<!-- ><center><h3><a href="#" onclick="openCity(event, 'Available_Projects')">  <center><i>Abstracts for topics floated for M.Tech/DD projects</i></center></a></h3> </center> -->
+<!-- <center><h3><a href="#" onclick="openCity(event, 'Available_Projects')">  <center><i>Abstracts for topics floated for M.Tech/DD projects</i></center></a></h3> </center> -->
 <center><h3><a href="project_writeup/MS_PhD_Jan_2020.html" target="_blank"><center><i>Abstracts for topics floated for MS admissions (Jan 2020)</i></center></a></h3> </center>
 <center><h3>** We have received a grant to carry out research in development of compact kinetic models. Open positions are likely to be adverstised for project assistants soon. Please watch out if you are interested. ** </h3> </center>
 <!-- <center><h2> <a href="#" onclick="openCity(event, 'Available_Projects')"><i>Possible M. Tech/DD projects 2019</i></center></a></h2> -->
