adding link to tdce lab

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@ image2.src = "images/img4.jpg"
 <h2>Krithika Narayanaswamy</h2>
 Assistant Professor<br>
 <a href="#" onclick="openCity(event, 'Current_Research')"> Computational Chemistry & Combustion group</a>,<br>
-Thermodynamics and Combustion Engineering Lab,<br>
+<a href="https://mech.iitm.ac.in/tdce" target="_blank">Thermodynamics and Combustion Engineering Lab</a>,<br>
 <a href="https://mech.iitm.ac.in/meiitm/" target="_blank">Department of Mechanical Engineering</a>,<br>
 <a href="https://www.iitm.ac.in/" target="_blank">Indian Institute of Technology Madras</a>,<br>
 Chennai - 600036<br>
