welcome to me6166

--- a/teaching/ME6166_Jan_May_2020.html
+++ b/teaching/ME6166_Jan_May_2020.html
@@ -189,7 +189,7 @@ Email: varuns@iitm.ac.in </li>
 </tr>
 </table>
 
-<!--
+
 </div><br>
 
 <br>
@@ -197,31 +197,17 @@ Email: varuns@iitm.ac.in </li>
 <tr> <td width="100%">
 <h3> <font color="pink">
 Updates/Announcements:</font></h3>
-<ul>
-	<li> 29/7: Final exam and solutions (to selected problems) are added</li> 
-	<li> 28/4: Reading materials for solid fuel combustion are added</li> 
-	<li> 26/4: Reading materials for flame stability are added within Module 3</li> 
-</ul>
-	<button class="collapsible"><h4>View older announcements</h4></button>
-	<div class="content">
 	<ul>
-	<li> 16/4: Tutorial on liquid fuel combustion is added </li> 
-	<li> 11/4: Demo/Tutorial session on 12/4.
-	<li> 5/4: Tutorial on gaseous fuel combustion, questionnaire for Demo 3 are added</li> 
-	<li> 15/3: Tutorial on non-premixed flames is updated </li> 
-	<li> 6/3: Solutions for Demo 2 are due on 7/3 before 5 PM. Turn it in to the TAs.
-    <li> 28/2: Tutorial on non-premixed flames is updated </li>
-	<li> 25/2: Summary for selected lectures in Module 1 has been uploaded (check Module 1 header) </li>
-	<li> 23/2: Images for exercise based on non-premixed flame demo are added (check demos) </li>
-	<li> 11/2: Images for exercise based on premixed flame demo are added (check demos) </li>
-	<li> 7/2: Tutorial on premixed flames is updated.</li>
-	<li> 29/1: Schedule for scribing the lectures has been added (see Grading policy).</li>
-	<li> 28/1: Demo and tutorial schedule (tentative) added.</li>
-	<li> 26/1: Reading exercise for premixed flame computations is added.</li>
-</ul>
+	<li> 3/1: Welcome to ME6166! Our first class is on Jan 13th (Monday)</li>
+	</ul>
+<!--	<button class="collapsible"><h4>View older announcements</h4></button>
+	<div class="content">
+-->
 </div>
 </td></tr>
 </table><br>
+
+<!--
 <table border="1" cellspacing="1" cellpadding="1"  width="100%">
 <tr> <td width="100%">
 <h3>
