venue change me6166

--- a/teaching/ME6166_Jan_May_2020.html
+++ b/teaching/ME6166_Jan_May_2020.html
@@ -156,7 +156,7 @@ Email: varuns@iitm.ac.in </li>
      <li> 3 lecture hours per week: G slot <br>
 		 <p><font color="lightgreen">Monday 12-12:50 PM, Thursdays: 10-10:50 AM, Friday: 9-9:50 AM</font></p></li>
 	  <li> Every second Wednesday hour (4:50-5:40 PM) is a tutorial hour, unless stated otherwise </li><br>
-	  <li> <p><font color="lightgreen">Venue: TDCE seminar hall</font></p></li>
+	  <li> <p><font color="lightgreen">Venue: MSB 359</font></p></li>
 </ul>
 </td>
 
