adding mma highlights

--- a/index.html
+++ b/index.html
@@ -1269,7 +1269,7 @@ Konnov, and Krithika Narayanaswamy, "Experimental study and a short kinetic mode
 <div id="panel1">
 	<ul style="list-style-type:square">
 	<li><a href="https://www.tandfonline.com/eprint/fzZsKINfreTb2vC9PfIR/full">e-print</a>
-	<li><a href="https://www.dropbox.com/s/59qd6qat51mh1pz/MMA.pdf?dl=0" target="_blank">Preprint*</a></li>
+	<li><a href="https://www.dropbox.com/s/59qd6qat51mh1pz/MMA.pdf?dl=0" target="_blank">Preprint*</a>,  <a href="https://www.dropbox.com/s/k8ce3sbn5avwjua/MMA_poster.pdf?dl=0" target="_blank">Highlights</a></li>
 	<li><a href="https://doi.org/10.1080/00102202.2018.1535492" target="_blank">Journal version</a></li>
 	<li><a href="https://www.dropbox.com/s/q2c60lulb44mutd/supplementary.pdf?dl=0" target="_blank">Supplementary document</a></li>
 	<!-- ><li>Experimental data: <a href="https://www.dropbox.com/s/93lg0d3klxy3uwd/MMA_mole%20fractions_final_EXPERIMENT.xls?dl=0" target="_blank">Speciation in atmospheric premixed flame, laminar burning velocities</a></li>-->
