adding mma highlights

--- a/teaching/ME6166_Jan_May_2020.html
+++ b/teaching/ME6166_Jan_May_2020.html
@@ -105,8 +105,8 @@ p
     <li> Combustion Technology: Essentials of Flames and Burners, by V. Raghavan, Ane/Athena Books, 2016 (VR) </li>
     <li> Applications of combustion principles to domestic gas burner design, by H. R. N Jones, 1990 (HJ) </li>
     <li> An introduction to fire dynamics, Douglas Drysdale, 2011 (DD) </li>
-	<li> Combustion and Mass transfer by D. B. Spalding, 1979 (DBS) </li>
-    <li> Combustion Theory by F. A. Williams, ABP, 1985 (FAW) </li>
+<!--	<li> Combustion and Mass transfer by D. B. Spalding, 1979 (DBS) </li>
+    <li> Combustion Theory by F. A. Williams, ABP, 1985 (FAW) </li> -->
     <li> Understanding Combustion by H. S. Mukunda, Macmillan India (HSM1) </li>
     <li> Combustion Physics by C. K. Law (CKL) </li>
 	<li> Theoretical and Numerical Combustion by Thierry Poinsot and Denis Veynante, 2016 (TP)</li>
@@ -181,9 +181,9 @@ Email: varuns@iitm.ac.in </li>
     <h3> Questions?</h3>
 	<ul>
 		<li> Instructors' office hours: <br>
-			TBA </li><br>
+			Friday 3-4 PM </li><br>
 		<li> Teaching Assistants: <br>
-		 TBA</li>
+		 Shanmugasundaram D.</li>
 	</ul>
 </td>
 </tr>
@@ -207,7 +207,7 @@ Updates/Announcements:</font></h3>
 </td></tr>
 </table><br>
 
-<!--
+
 <table border="1" cellspacing="1" cellpadding="1"  width="100%">
 <tr> <td width="100%">
 <h3>
@@ -215,12 +215,12 @@ Computing exercises:</h3>
 <ul>
 	<li> Request to download FlameMaster <a href="https://www.itv.rwth-aachen.de/index.php?id=flamemaster" target="_blank">here</a></li>
 	<li> Follow the installation instructions depending on your operating system (TAs can help you with this). Some systems available in TDCE 115 have FlameMaster pre-installed on them. Once again TAs can help you locate them. </li>
-	<li>Check out the example for 1D unstretched premixed flame within the Run directory:
+<!--	<li>Check out the example for 1D unstretched premixed flame within the Run directory:
 Path-to-FlameMaster/Run/FlameMan/Prem/Unstretched </li>	
 	<li>Check out the example for counterflow non-premixed flame within the Run directory:
 Path-to-FlameMaster/Run/FlameMan/Diff/Steady/C3H8/, Path-to-FlameMaster/Run/FlameMan/Diff/SteadyPlugFlow/ </li>	
 	<li>Check out the example for generating flamelet solutions within the Run directory:
-Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	
+Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 </ul>
 </td> </tr>
 </table><br>
@@ -228,11 +228,13 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>
 <table border="1" cellspacing="1" cellpadding="1"  width="100%">
 <tr> <td width="100%">
 <h3>Schedule for <font color="greenyellow">demonstrations</font> and <font color="khaki">tutorial sessions</font></h3>
-<button class="collapsible"><h4>View previous events</h4></button>
-<div class="content">
+<!-- <button class="collapsible"><h4>View previous events</h4></button> 
+ <div class="content">-->
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
 	<col width = "35%">		
+	<tr> <td> <font color="greenyellow">Premixed flames: Jet flame </td> <td> Jan 22nd </td></tr>
+<!-- 
 	<tr> <td> <font color="greenyellow">Premixed flames: Jet flame <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=2ZU0AJXXICyb2g7" target="_blank">Questionnaire</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=BaqqHxcjNhr8wvb" target="_blank">Images</a>. Due by February 21st </font></td> 
 	<td> February 7th</td></tr>
 	<tr> <td> <font color="khaki">Premixed flames</font> </td>
@@ -258,6 +260,7 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>
 	<td> April 16th</td></tr>
 	<tr> <td> <font color="greenyellow">Solid fuel combustion: tutorial/demo: Coal gasifier, MILD inspired burner for biomass</font></td>
 	<td> April 26th</td></tr>
+-->
 </table>
 
 <br><br>
@@ -269,35 +272,36 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>
 	</tr> 
 </table><br>
 
-<h3>Module 1: Premixed flames, with bunsen burner as an example:  <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=RUupt9g8MxPX20c" target="_blank">Tutorial</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=kQeLROs54Biyg0j" target="_blank">Reading Exercise</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=KAXqhCYjjJplUyu" target="_blank">Lecture summary</a></h3>
+<h3>Module 1: Premixed flames, with bunsen burner as an example:  </h3>
+	<!--<a href="https://owncloud.iitm.ac.in/public.php?service=files&t=RUupt9g8MxPX20c" target="_blank">Tutorial</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=kQeLROs54Biyg0j" target="_blank">Reading Exercise</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=KAXqhCYjjJplUyu" target="_blank">Lecture summary</a></h3> -->
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
 	<col width = "35%">	
    <tr> 
-	<td> Notion of flame speed, global energy balance to derive relations between flame speed, thermochemistry and kinetics </td>
-	<td> CKL $7.6.1, CKL $7.6.2, FAW $5.1.2, <br> <a href="https://www.tandfonline.com/doi/abs/10.1080/00102209308907668" target="_blank">Measurement of adiabatic flame speeds</a></td> </tr>
+	<td> Notion of flame speed, and its relation to thermochemistry and kinetics </td>
+	<td> <!-- CKL $7.6.1, CKL $7.6.2, FAW $5.1.2, <br> <a href="https://www.tandfonline.com/doi/abs/10.1080/00102209308907668" target="_blank">Measurement of adiabatic flame speeds</a>--> </td> </tr>
 	
 	<tr> <td> Dependence of SL on various parameters </td>
-	<td> CKL $1.4.6, CKL $7.7 </td></tr>
+	<td> <!--CKL $1.4.6, CKL $7.7--> </td></tr>
 	
 	<tr> <td> 1D conservation laws for steady laminar premixed flames  </td>
-	<td> General derivation: CKL $5.1/TP $2.3, <br> Low Mach number assumption: CKL $5.2.4.3 </td></tr>
+	<td> <!-- General derivation: CKL $5.1/TP $2.3, <br> Low Mach number assumption: CKL $5.2.4.3--> </td></tr>
 	
 	<tr> <td> Flame speed calculations using FlameMaster </td>
-	<td> <a href="https://www.researchgate.net/profile/Ellen_Meeks/publication/260388319_PREMIX_a_fortran_program_for_modeling_steady_laminar_one-dimensional_premixed_flames/links/53fe0de20cf23bb019bd249d/PREMIX-a-fortran-program-for-modeling-steady-laminar-one-dimensional-premixed-flames.pdf" target="_blank">PREMIX documentation</a> </td></tr>
+	<td> <!-- <a href="https://www.researchgate.net/profile/Ellen_Meeks/publication/260388319_PREMIX_a_fortran_program_for_modeling_steady_laminar_one-dimensional_premixed_flames/links/53fe0de20cf23bb019bd249d/PREMIX-a-fortran-program-for-modeling-steady-laminar-one-dimensional-premixed-flames.pdf" target="_blank">PREMIX documentation</a> --> </td></tr>
 	
-	<tr> <td> Quenching and ignition energy  </td>
-	<td> HSM1 $7.1, $7.2, $8.0</td></tr>
+	<tr> <td> Quenching, ignition energy, and Flammability limits  </td>
+	<td> <!-- HSM1 $7.1, $7.2, $8.0 --> </td></tr>
 	
-	<tr> <td> Flammability limits  </td>
-	<td> DD $3.1, $3.3,  CKL $8.5</td></tr>
+	<!-- ><tr> <td>   </td>
+	<td> DD $3.1, $3.3,  CKL $8.5 </td></tr>-->
 	
 	<tr> <td> Flame stretch  </td>
-	<td> TP $2.6</td></tr>
+	<td> <!-- TP $2.6 --> </td></tr>
 	
 	<tr> <td> Turbulent premixed flames  </td>
-	<td>  Introduction: CKL $11.1, $11.2, $11.3<br>
-		Modeling: TP $5.1.3, $5.3.2, $5.3.3, $5.3.5, $5.3.6<br>
+	<td>  <!-- Introduction: CKL $11.1, $11.2, $11.3<br>
+		Modeling: TP $5.1.3, $5.3.2, $5.3.3, $5.3.5, $5.3.6<br> -->
 	 </td></tr>
 </table><br>
 
@@ -307,64 +311,72 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>
 	<col width = "35%">	
    <tr> 
 	<td> Candle flame, counterflow non-premixed flame </td>
-	<td> TP $3.1, <a href="https://www.sciencedirect.com/science/article/pii/S0082078489801584" target="_blank">Gov Eqns: Opposed flow flame</a></td> </tr>
+	<td> <!-- TP $3.1, <a href="https://www.sciencedirect.com/science/article/pii/S0082078489801584" target="_blank">Gov Eqns: Opposed flow flame</a> --> </td> </tr>
 	
 	<tr> <td> Opp-diff flame structure at different strain rates using FlameMaster </td>
-	<td> Solution Procedure: <a href="https://www.osti.gov/servlets/purl/568983" target="_blank">OPPDIFF</a>, Potential flow configuration (provided with  FlameMaster manual)</td></tr>
+	<td> <!-- Solution Procedure: <a href="https://www.osti.gov/servlets/purl/568983" target="_blank">OPPDIFF</a>, Potential flow configuration (provided with  FlameMaster manual) --> </td></tr>
 	
 	<tr> <td> Flamelet equations and concept of scalar dissipation rate  </td>
-	<td> TP $3.2, NP $9.1</td></tr>
+	<td> <!-- TP $3.2, NP $9.1 --> </td></tr>
 	
-	<tr> <td> Flame structure problem: Burke Schumann flame with fast chemistry assumption<br>
+	<!-- <tr> <td> Flame structure problem: Burke Schumann flame with fast chemistry assumption<br>
 		<p style="padding-left: 205px;">Flame location, flame temperature</p></td>
 	<td> TP $3.3</td></tr>
 
-	<tr> <td> Mixing problem: Steady strained 1D flame with fast chemistry assumption<br> 
+	<tr> <td> Mixing problem: 
+	-->
+	<tr> <td> Steady strained 1D flame with fast chemistry assumption<br> 
 		<p style="padding-left: 138px;">Flamelet solution, relation of scalar dissipation rate to strain rate</p>  </td>
-	<td> TP $3.4.2</td></tr> 
+	<td> <!-- TP $3.4.2 --> </td></tr> 
 	
 	<tr> <td> Ignition, extinction, and S-curve </td>
-	<td> <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=XywzblFfE6ngdvv" target="_blank">Extinction Demo</a>, NP $9.4, NP $9.7
+	<td> <!-- <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=XywzblFfE6ngdvv" target="_blank">Extinction Demo</a>, NP $9.4, NP $9.7 --> </td></tr>
 	
 	<tr> <td> Turbulent non-premixed flames  </td>
-	<td> CKL $11.4, TP $6.4.3, TP $6.4.5 </td></tr>
+	<td> <!-- CKL $11.4, TP $6.4.3, TP $6.4.5 --> </td></tr>
 	
 </table><br>
 
-<h3> Module 3: Burners for gaseous fuels: <a href="https://owncloud.iitm.ac.in/index.php/s/iI8L4yd0CGPpYeF" target="_blank"> Tutorial </a> </h3>
+<h3> Module 3: Burners for gaseous fuels: <!-- <a href="https://owncloud.iitm.ac.in/index.php/s/iI8L4yd0CGPpYeF" target="_blank"> Tutorial </a> --> </h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
 	<col width = "35%">	
    <tr> 
 	<td> Flame stability - flash back and blow off </td>
-	<td> <a href="https://owncloud.iitm.ac.in/index.php/s/Wz9PGgYfWCxlE7g" target="_blank">Grad school course notes, Bowman and Mitchell, 2006</a> </td> </tr>
+	<td> <!-- <a href="https://owncloud.iitm.ac.in/index.php/s/Wz9PGgYfWCxlE7g" target="_blank">Grad school course notes, Bowman and Mitchell, 2006</a> --> </td> </tr>
 
    <tr> 
 	<td> Domestic LPG stove burner - design concepts </td>
-	<td> VR $3.1.3, $3.1.4, VR $4.4--$4.6, HJ $3.1--$3.4 </td> </tr>
+	<td> <!-- VR $3.1.3, $3.1.4, VR $4.4--$4.6, HJ $3.1--$3.4 --> </td> </tr>
 	
 	<tr> <td> MILD combustion - Theory of extinction of well-stirred reactors  </td>
-	<td> <a href="https://www.sciencedirect.com/science/article/pii/S1540748902801432" target="_blank">MILD combustion burner</a>, VR $4.3</td></tr>
-	<tr> <td> Stationary gas turbines </td>
-	<td> <a href="https://oaktrust.library.tamu.edu/handle/1969.1/163372" target="_blank">Lean premixed combustion</td></tr>
+	<td> <!-- <a href="https://www.sciencedirect.com/science/article/pii/S1540748902801432" target="_blank">MILD combustion burner</a>, VR $4.3 -->
+	</td></tr>
+	<tr> <td> Stationary gas turbines - Lean premixed combustion </td>
+	<td> <!-- <a href="https://oaktrust.library.tamu.edu/handle/1969.1/163372" target="_blank">Lean premixed combustion --> </td></tr>
 	
 </table><br>
 
-	<h3> Module 4: Spray combustion and applications: <a href="https://owncloud.iitm.ac.in/index.php/s/7W9G78IN9FQ2YNy" target="_blank"> Tutorial </a> </h3>
+	<h3> Module 4: Spray combustion and applications: <!-- <a href="https://owncloud.iitm.ac.in/index.php/s/7W9G78IN9FQ2YNy" target="_blank"> Tutorial </a> --> </h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
 	<col width = "35%">	
 	<tr> <td> Droplet combustion theory  </td>
-	<td> DBS $3, $4, $5, $6, $7 </td></tr>
+	<td> <!-- DBS $3, $4, $5, $6, $7 --> </td></tr>
 
    <tr> 
 	<td> Basics of atomization and types of injectors</td>
-	<td> <a href="https://owncloud.iitm.ac.in/index.php/s/eK1OZZGF84JNuaU">Energy budget in atomization</a>, <br><a href="https://owncloud.iitm.ac.in/index.php/s/DGF0NrOM4Kbh2AG">Atomization processes (AW $3)</a> </td> </tr>
+	<td> <!-- <a href="https://owncloud.iitm.ac.in/index.php/s/eK1OZZGF84JNuaU">Energy budget in atomization</a>, <br><a href="https://owncloud.iitm.ac.in/index.php/s/DGF0NrOM4Kbh2AG">Atomization processes (AW $3)</a> --> </td> </tr>
+
+	<tr><td> Effect of swirl on flames</td><td> </td></tr>
 	
 	<tr> <td> Spray combustion: (i) Application in gas turbines and LP rockets  </td>
 	<td> </td></tr>
 
 	<tr> <td> Spray combustion: (ii) Application in furnaces and boilers </td>
+	<td> </td></tr>
+
+	<tr> <td> Emerging applications: TAPS combustors, Staged combustors </td>
 	<td> </td></tr>
 	
 </table><br>
@@ -378,13 +390,13 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>
 	<td> </td> </tr>
 	
 	<tr> <td> Basic principles </td>
-	<td> HSM2 $1, $4 </td></tr>
+	<td> <!-- HSM2 $1, $4 --> </td></tr>
 	
 	<tr> <td> Combustion and gasification of biomass </td>
-	<td> HSM2 $6 </td></tr>
+	<td> <!-- HSM2 $6 --> </td></tr>
 
 	<tr> <td> Gasifier stoves </td>
-	<td> HSM2 $8</td></tr>
+	<td> <!-- HSM2 $8 --> </td></tr>
 	
 </table><br>
 	
