--- a/teaching/ME6166_Jan_May_2020.html
+++ b/teaching/ME6166_Jan_May_2020.html
@@ -97,7 +97,7 @@ p
 <tr> <td><center> <h2> Jan-May 2020</h2> </center></td> </tr>
 </table> 
 
-<center>For a glimpse of the course content, check out the <a href="./ME6166_Jan_May_2019.html" target="_blank">website for the class offered last time</a>.</center><br>
+<!-- <center>For a glimpse of the course content, check out the <a href="./ME6166_Jan_May_2019.html" target="_blank">website for the class offered last time</a>.</center><br> -->
 
 <table border="1" cellspacing="1" cellpadding="1"  width="100%">
 <tr> <td width="100%"><h3> Suggested Textbooks: </h3>
@@ -181,7 +181,7 @@ Email: varuns@iitm.ac.in </li>
     <h3> Questions?</h3>
 	<ul>
 		<li> Instructors' office hours: <br>
-			Friday 3-4 PM </li><br>
+			Friday 3-4 PM, TDCE Seminar hall </li><br>
 		<li> Teaching Assistants: <br>
 		 Shanmugasundaram D.</li>
 	</ul>
@@ -278,7 +278,7 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 	<col width = "65%">
 	<col width = "35%">	
    <tr> 
-	<td> Notion of flame speed, and its relation to thermochemistry and kinetics </td>
+	<td> Flame speed, its relation to thermochemistry and kinetics </td>
 	<td> <!-- CKL $7.6.1, CKL $7.6.2, FAW $5.1.2, <br> <a href="https://www.tandfonline.com/doi/abs/10.1080/00102209308907668" target="_blank">Measurement of adiabatic flame speeds</a>--> </td> </tr>
 	
 	<tr> <td> Dependence of SL on various parameters </td>
@@ -305,7 +305,7 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 	 </td></tr>
 </table><br>
 
-<h3>Module 2: Non-premixed flames, with counterflow diffusion flame as an example: <a href="https://owncloud.iitm.ac.in/index.php/s/uDStSgYMsRWRGzo" target="_blank">Tutorial</a></h3>
+<h3>Module 2: Non-premixed flames, with counterflow diffusion flame as an example: <!--<a href="https://owncloud.iitm.ac.in/index.php/s/uDStSgYMsRWRGzo" target="_blank">Tutorial</a> --> </h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
 	<col width = "35%">	
@@ -349,12 +349,13 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 	<td> Domestic LPG stove burner - design concepts </td>
 	<td> <!-- VR $3.1.3, $3.1.4, VR $4.4--$4.6, HJ $3.1--$3.4 --> </td> </tr>
 	
-	<tr> <td> MILD combustion - Theory of extinction of well-stirred reactors  </td>
+	<tr> <td> MILD combustion: Theory of extinction of well-stirred reactors  </td>
 	<td> <!-- <a href="https://www.sciencedirect.com/science/article/pii/S1540748902801432" target="_blank">MILD combustion burner</a>, VR $4.3 -->
 	</td></tr>
-	<tr> <td> Stationary gas turbines - Lean premixed combustion </td>
+	<tr> <td> Stationary gas turbines: Lean premixed combustion </td>
 	<td> <!-- <a href="https://oaktrust.library.tamu.edu/handle/1969.1/163372" target="_blank">Lean premixed combustion --> </td></tr>
-	
+	<tr> <td> Aircraft engine concepts: TAPS combustors, Staged combustors </td>
+	<td> </td></tr>	
 </table><br>
 
 	<h3> Module 4: Spray combustion and applications: <!-- <a href="https://owncloud.iitm.ac.in/index.php/s/7W9G78IN9FQ2YNy" target="_blank"> Tutorial </a> --> </h3>
@@ -376,8 +377,6 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 	<tr> <td> Spray combustion: (ii) Application in furnaces and boilers </td>
 	<td> </td></tr>
 
-	<tr> <td> Emerging applications: TAPS combustors, Staged combustors </td>
-	<td> </td></tr>
 	
 </table><br>
 
