adding me6166 course module

--- a/teaching/ME6166_Jan_May_2020.html
+++ b/teaching/ME6166_Jan_May_2020.html
@@ -111,6 +111,7 @@ p
     <li> Combustion Physics by C. K. Law (CKL) </li>
 	<li> Theoretical and Numerical Combustion by Thierry Poinsot and Denis Veynante, 2016 (TP)</li>
 	<li> <a href="https://www.itv.rwth-aachen.de/fileadmin/Downloads/Summerschools/SummerSchool.pdf" target="_blank">Ercoftac Summer school, Norbert Perters, 1992 (NP)</a></li>
+	<li> Beér, János Miklós, and Norman A. Chigier. "Combustion aerodynamics." New York (1972). </li>
 	<li> Combustion of liquid sprays, Alan Williams, 1989 (AW)</li>
 	<li> Understanding clean energy and fuels from biomass, H. S. Mukunda (HSM2)</li>
 	<!-- <a href="https://owncloud.iitm.ac.in/index.php/s/q5BbpF31aIEcTjL" target="_blank">Understanding clean energy and fuels from biomass, H. S. Mukunda (HSM2)</a> -->
@@ -130,7 +131,7 @@ p
 		<p style="padding-left: 50px;"><font color="lightgreen">Topics: All materials covered from the beginning of the course till the last day of classes</font></p></li>
 		<p style="padding-left: 50px;"><a href="https://owncloud.iitm.ac.in/index.php/s/AhodnwpsABHiOqK" target="_blank">Exam</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/HiLysdWlUimMQnK">Solutions</a> (to a couple of problems)
 		<p style="padding-left: 50px;"><a href="https://owncloud.iitm.ac.in/index.php/s/O9k9L3nIqznZn7R" target="_blank">Supplementary Exam</a> (selected questions) </li> -->
-		 <li> Demonstration reports: 20%. Groups of 2 or 3.</li> 
+		 <li> Demonstration + Computational exercises: 20%. Groups of 2 or 3.</li> 
 		 <!-- <li> Lecture notes: 5% <a href="https://owncloud.iitm.ac.in/index.php/s/bTuzOTYzPEcjqf6" target="_blank">March/April Schedule</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=8YtY5rA5G4JVuxz" target="_blank">LaTeX Template</a></li> -->
 		 <li> <font color="lightgreen">About a third of the exams will be in line with the tutorial sets</font>
 	</ul>
@@ -354,8 +355,6 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 	</td></tr>
 	<tr> <td> Stationary gas turbines: Lean premixed combustion </td>
 	<td> <!-- <a href="https://oaktrust.library.tamu.edu/handle/1969.1/163372" target="_blank">Lean premixed combustion --> </td></tr>
-	<tr> <td> Aircraft engine concepts: TAPS combustors, Staged combustors </td>
-	<td> </td></tr>	
 </table><br>
 
 	<h3> Module 4: Spray combustion and applications: <!-- <a href="https://owncloud.iitm.ac.in/index.php/s/7W9G78IN9FQ2YNy" target="_blank"> Tutorial </a> --> </h3>
@@ -376,8 +375,9 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 
 	<tr> <td> Spray combustion: (ii) Application in furnaces and boilers </td>
 	<td> </td></tr>
-
-	
+	<tr> <td> Aircraft engine concepts: TAPS combustors, Staged combustors </td>
+	<td> </td></tr>	
+		
 </table><br>
 
 <h3> Module 5: Solid fuel combustion</h3>
