me6166 getting started

--- a/teaching/ME6166_Jan_May_2020.html
+++ b/teaching/ME6166_Jan_May_2020.html
@@ -199,7 +199,7 @@ Email: varuns@iitm.ac.in </li>
 <h3> <font color="pink">
 Updates/Announcements:</font></h3>
 	<ul>
-	<li> 3/1: Welcome to ME6166! Our first class is on Jan 13th (Monday): <a href="https://krithikasivaram.github.io/teaching/ME6166_Jan_May_2020.html" target="_blank">Getting started</a> </h3><br> </li>
+	<li> 3/1: Welcome to ME6166! Our first class is on Jan 13th (Monday): <a href="https://owncloud.iitm.ac.in/index.php/s/oWR8SuyNSaWzamv" target="_blank">Getting started</a> </h3><br> </li>
 	</ul>
 <!--	<button class="collapsible"><h4>View older announcements</h4></button>
 	<div class="content">
