adding flyer to me6166

--- a/teaching/ME6166_Jan_May_2020.html
+++ b/teaching/ME6166_Jan_May_2020.html
@@ -91,13 +91,31 @@ p
 </head>
 
 <body bgcolor = "black">
+	
 
 <table border="0" cellspacing="1" cellpadding="1"  width="100%">
 <tr> <td><center> <h2> ME6166: Combustion Technology </h2></td>
 <tr> <td><center> <h2> Jan-May 2020</h2> </center></td> </tr>
 </table> 
 
+    <center>  <img src="Flyer_Jan_May_2020.jpg" style="width:100%"> </center>
+
+
 <!-- <center>For a glimpse of the course content, check out the <a href="./ME6166_Jan_May_2019.html" target="_blank">website for the class offered last time</a>.</center><br> -->
+<br>
+<table border="1" cellspacing="1" cellpadding="1"  width="100%">
+<tr> <td width="100%">
+<h3> <font color="pink">
+Updates/Announcements:</font></h3>
+	<ul>
+	<li> 3/1: Welcome to ME6166! Our first class is on Jan 13th (Monday): <a href="https://owncloud.iitm.ac.in/index.php/s/oWR8SuyNSaWzamv" target="_blank">Getting started</a> </h3><br> </li>
+	</ul>
+<!--	<button class="collapsible"><h4>View older announcements</h4></button>
+	<div class="content">
+-->
+</div>
+</td></tr>
+</table><br>
 
 <table border="1" cellspacing="1" cellpadding="1"  width="100%">
 <tr> <td width="100%"><h3> Suggested Textbooks: </h3>
@@ -193,20 +211,7 @@ Email: varuns@iitm.ac.in </li>
 
 </div><br>
 
-<br>
-<table border="1" cellspacing="1" cellpadding="1"  width="100%">
-<tr> <td width="100%">
-<h3> <font color="pink">
-Updates/Announcements:</font></h3>
-	<ul>
-	<li> 3/1: Welcome to ME6166! Our first class is on Jan 13th (Monday): <a href="https://owncloud.iitm.ac.in/index.php/s/oWR8SuyNSaWzamv" target="_blank">Getting started</a> </h3><br> </li>
-	</ul>
-<!--	<button class="collapsible"><h4>View older announcements</h4></button>
-	<div class="content">
--->
-</div>
-</td></tr>
-</table><br>
+
 
 
 <table border="1" cellspacing="1" cellpadding="1"  width="100%">
