--- a/teaching/ME6166_Jan_May_2020.html
+++ b/teaching/ME6166_Jan_May_2020.html
@@ -285,7 +285,7 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 	<col width = "35%">	
    <tr> 
 	<td> Flame speed, its relation to thermochemistry and kinetics </td>
-	<td> <!-- CKL $7.6.1, CKL $7.6.2, FAW $5.1.2, <br> <a href="https://www.tandfonline.com/doi/abs/10.1080/00102209308907668" target="_blank">Measurement of adiabatic flame speeds</a>--> </td> </tr>
+	<td> <a href="https://www.tandfonline.com/doi/abs/10.1080/00102209308907668" target="_blank">Measurement of adiabatic flame speeds</a> </td> </tr>
 	
 	<tr> <td> Dependence of SL on various parameters </td>
 	<td> <!--CKL $1.4.6, CKL $7.7--> </td></tr>
