--- a/teaching/ME6166_Jan_May_2020.html
+++ b/teaching/ME6166_Jan_May_2020.html
@@ -109,6 +109,7 @@ p
 Updates/Announcements:</font></h3>
 	<ul>
 	<li> 3/1: Welcome to ME6166! Our first class is on Jan 13th (Monday): <a href="https://owncloud.iitm.ac.in/index.php/s/oWR8SuyNSaWzamv" target="_blank">Getting started</a> </h3><br> </li>
+	<li> 16/1: Reading exercise for Module 1 added </h3><br> </li>
 	</ul>
 <!--	<button class="collapsible"><h4>View older announcements</h4></button>
 	<div class="content">
