--- a/teaching/ME6166_Jan_May_2020.html
+++ b/teaching/ME6166_Jan_May_2020.html
@@ -288,8 +288,8 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 	<td> Flame speed, its relation to thermochemistry and kinetics </td>
 	<td> <a href="https://www.tandfonline.com/doi/abs/10.1080/00102209308907668" target="_blank">Measurement of adiabatic flame speeds</a> </td> </tr>
 	
-	<tr> <td> Dependence of SL on various parameters </td>
-	<td> <!--CKL $1.4.6, CKL $7.7--> </td></tr>
+	<tr> <td> Dependence of flame speed on various parameters </td>
+	<td> <!--CKL $1.4.6, CKL $7.7--> <a href="https://owncloud.iitm.ac.in/index.php/s/6XM3hIIe6AMwZwH" target="_blank">Dependence of reaction rate on p and T (CKL)</a></td></tr>
 	
 	<tr> <td> 1D conservation laws for steady laminar premixed flames  </td>
 	<td> <!-- General derivation: CKL $5.1/TP $2.3, <br> Low Mach number assumption: CKL $5.2.4.3--> </td></tr>
