--- a/teaching/ME6166_Jan_May_2020.html
+++ b/teaching/ME6166_Jan_May_2020.html
@@ -108,6 +108,7 @@ p
 <h3> <font color="pink">
 Updates/Announcements:</font></h3>
 	<ul>
+	<li> 20/1: Source pdfs and sections in textbooks added with reading materials. If password is asked for, it is this-course-number_this-year (Ex: ME5107_2019)
 	<li> 17/1: Reading exercise for Module 1 added </h3><br> </li>
 	<li> 3/1: Welcome to ME6166! Our first class is on Jan 13th (Monday): <a href="https://owncloud.iitm.ac.in/index.php/s/oWR8SuyNSaWzamv" target="_blank">Getting started</a> </h3><br> </li>
 	</ul>
@@ -272,8 +273,8 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 
 <br><br>
 <table border="1" cellspacing="2" cellpadding="2"  width="100%">
-	<col width = "65%">
-	<col width = "35%">	
+	<col width = "55%">
+	<col width = "45%">	
 	<tr> <th> <h2> Course outline</h2>
 		 <th> <h2> Reading </h2>
 	</tr> 
@@ -282,14 +283,14 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 <h3>Module 1: Premixed flames, with bunsen burner as an example:  </h3>
 	<!--<a href="https://owncloud.iitm.ac.in/public.php?service=files&t=RUupt9g8MxPX20c" target="_blank">Tutorial</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=kQeLROs54Biyg0j" target="_blank">Reading Exercise</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=KAXqhCYjjJplUyu" target="_blank">Lecture summary</a></h3> -->
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
-	<col width = "65%">
-	<col width = "35%">	
+	<col width = "55%">
+	<col width = "45%">	
    <tr> 
 	<td> Flame speed, its relation to thermochemistry and kinetics </td>
-	<td> <a href="https://www.tandfonline.com/doi/abs/10.1080/00102209308907668" target="_blank">Measurement of adiabatic flame speeds</a> </td> </tr>
+	<td> CKL $7.6.1, CKL $7.6.2, <a href="https://owncloud.iitm.ac.in/index.php/s/86eGnautzaiB70Y" target="_blank">Measurement of adiabatic flame speeds</a> </td> </tr>
 	
 	<tr> <td> Dependence of flame speed on various parameters </td>
-	<td> <!--CKL $1.4.6, CKL $7.7--> <a href="https://owncloud.iitm.ac.in/index.php/s/6XM3hIIe6AMwZwH" target="_blank">Dependence of reaction rate on p and T (CKL)</a></td></tr>
+	<td> CKL $1.4.6, CKL $7.7, <a href="https://owncloud.iitm.ac.in/index.php/s/6XM3hIIe6AMwZwH" target="_blank">Dependence of reaction rate on p and T (CKL)</a></td></tr>
 	
 	<tr> <td> 1D conservation laws for steady laminar premixed flames  </td>
 	<td> <!-- General derivation: CKL $5.1/TP $2.3, <br> Low Mach number assumption: CKL $5.2.4.3--> </td></tr>
@@ -314,8 +315,8 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 
 <h3>Module 2: Non-premixed flames, with counterflow diffusion flame as an example: <!--<a href="https://owncloud.iitm.ac.in/index.php/s/uDStSgYMsRWRGzo" target="_blank">Tutorial</a> --> </h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
-	<col width = "65%">
-	<col width = "35%">	
+	<col width = "55%">
+	<col width = "45%">	
    <tr> 
 	<td> Candle flame, counterflow non-premixed flame </td>
 	<td> <!-- TP $3.1, <a href="https://www.sciencedirect.com/science/article/pii/S0082078489801584" target="_blank">Gov Eqns: Opposed flow flame</a> --> </td> </tr>
@@ -346,8 +347,8 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 
 <h3> Module 3: Burners for gaseous fuels: <!-- <a href="https://owncloud.iitm.ac.in/index.php/s/iI8L4yd0CGPpYeF" target="_blank"> Tutorial </a> --> </h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
-	<col width = "65%">
-	<col width = "35%">	
+	<col width = "55%">
+	<col width = "45%">	
    <tr> 
 	<td> Flame stability - flash back and blow off </td>
 	<td> <!-- <a href="https://owncloud.iitm.ac.in/index.php/s/Wz9PGgYfWCxlE7g" target="_blank">Grad school course notes, Bowman and Mitchell, 2006</a> --> </td> </tr>
@@ -365,8 +366,8 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 
 	<h3> Module 4: Spray combustion and applications: <!-- <a href="https://owncloud.iitm.ac.in/index.php/s/7W9G78IN9FQ2YNy" target="_blank"> Tutorial </a> --> </h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
-	<col width = "65%">
-	<col width = "35%">	
+	<col width = "55%">
+	<col width = "45%">	
 	<tr> <td> Droplet combustion theory  </td>
 	<td> <!-- DBS $3, $4, $5, $6, $7 --> </td></tr>
 
@@ -388,8 +389,8 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 
 <h3> Module 5: Solid fuel combustion</h3>
 	<table border="1" cellspacing="2" cellpadding="2" width="100%">
-	<col width = "65%">
-	<col width = "35%">	
+	<col width = "55%">
+	<col width = "45%">	
    <tr> 
 	<td> Single particle combustion theory for coal and biomass</td>
 	<td> </td> </tr>
