adding lecture notes

--- a/teaching/ME6166_Jan_May_2020.html
+++ b/teaching/ME6166_Jan_May_2020.html
@@ -108,6 +108,7 @@ p
 <h3> <font color="pink">
 Updates/Announcements:</font></h3>
 	<ul>
+	<li> 20/1: Lecture notes added for Week 1 (will be updated once a week)
 	<li> 20/1: Source pdfs and sections in textbooks added with reading materials. If password is asked for, it is this-course-number_this-year (Ex: ME5107_2019)
 	<li> 17/1: Reading exercise for Module 1 added </h3><br> </li>
 	<li> 3/1: Welcome to ME6166! Our first class is on Jan 13th (Monday): <a href="https://owncloud.iitm.ac.in/index.php/s/oWR8SuyNSaWzamv" target="_blank">Getting started</a> </h3><br> </li>
@@ -280,8 +281,8 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 	</tr> 
 </table><br>
 
-<h3>Module 1: Premixed flames, with bunsen burner as an example:  </h3>
-	<!--<a href="https://owncloud.iitm.ac.in/public.php?service=files&t=RUupt9g8MxPX20c" target="_blank">Tutorial</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=kQeLROs54Biyg0j" target="_blank">Reading Exercise</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=KAXqhCYjjJplUyu" target="_blank">Lecture summary</a></h3> -->
+<h3>Module 1: Premixed flames, with bunsen burner as an example: <a href="https://owncloud.iitm.ac.in/index.php/s/5QarvLAi3LHTrcW" target="_blank">Lecture notes</a> </h3>
+	<!--<a href="https://owncloud.iitm.ac.in/public.php?service=files&t=RUupt9g8MxPX20c" target="_blank">Tutorial</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=kQeLROs54Biyg0j" target="_blank">Reading Exercise</a>, </h3> -->
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "55%">
 	<col width = "45%">	
